# Rover

./: .gitattributes  .gitignore  .gitmodules  .todo.txt  CODEOWNERS  Dockerfile  Pre-flight.md  README.md  build.sh  build_docker.sh  dependencys_tmp.txt  docker_entrypoint  dockerfile  install.sh  install_pcl.sh  kill.sh  launch.bash  launch.sh  push.sh  remote_launch.sh  run.py  run_video.py  super_client_configuration_file.xml  udev.rules  zenoh_basestation.config.json5  zenoh_rover.config.json5
.devcontainer/: Dockerfile  devcontainer.json  ros_entrypoint.sh
.github/workflows/: docker-image.yml
arm_ws/install/: local_setup.sh  setup.sh
arm_ws/log/: latest_build
arm_ws/src/arm/: setup.py
arm_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
arm_ws/src/log/: latest_build
docker/: Dockerfile  Dockerfile.modifications  Dockerfile.realsense  build.Dockerfile  build.sh  compose.yaml  compose.yml  dockerfile  entrypoint.sh  install-docker.sh  nuke-everything.sh  run.sh  start-detached.sh  start-detatched.sh
docker/camera_pipeline/: Dockerfile
docker/compose/: docker-compose.yml  note.txt  realsense_shell.sh  ros_entrypoint.sh  source.sh
docker/teensy/: Dockerfile  entrypoint.sh
docker/unitree lidar/: Dockerfile
docker/unitree_lidar/: Dockerfile  dockerfile  entrypoint.sh
docker/zed_f9p/: Dockerfile  zed_f9p.yaml
docs/: install.md  install.md.backup  vs-code.md
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
scripts/ros2-humble-isaac/: install.sh  ros2-docker  ros2-docker-desktop  ros2-docker-isaac  ros_entrypoint.sh
src/: GPIO_driver.py  camera_test.py  sabertooth_serial.py
src/arducam/: package.xml  setup.cfg  setup.py
src/arducam/arducam/: arducam_video.py
src/arm_description/: package.xml  setup.py
src/arm_description/config/: joint_limits.yml
src/arm_description/urdf/: uiowa_arm.urdf
src/aruco_detection/: package.xml  setup.py
src/aruco_detection/aruco_detection/: aruco_detector_node.py
src/aruco_detection/launch/: aruco_detector.launch.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/rover/: package.xml  setup.cfg  setup.py
src/rover/launch/: rover.launch.py
src/rover_bringup/: package.xml  setup.py
src/rover_bringup/launch/: all.launch.py  dev_all.launch.py  (+1 more)
src/rover_description/: CMakeLists.txt  package.xml
src/rover_hardware_interface/: CMakeLists.txt  package.xml  rover_hardware_interface.xml
src/rover_interactions/: package.xml  setup.cfg  setup.py
src/rover_launch/: package.xml  setup.py
src/simple_hardware_interface/: package.xml  setup.cfg  setup.py
src/uiowa_rover/: package.xml  setup.py
src/uirover/: CMakeLists.txt  package.xml
src/uirover_arducam/: package.xml  setup.cfg  setup.py
src/uirover_aruco/: package.xml  setup.cfg  setup.py
src/uirover_basestation/: CMakeLists.txt  package.xml
src/uirover_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/uirover_bringup/config/: zenoh_basestation.config.json  zenoh_rover.config.json
src/uirover_bringup/launch/: all.launch.py  basestation.launch.py  dev_all.launch.py  moveit.launch.py  realsense_demo.launch.py  realsense_infra_slam_demo.launch.py  realsense_stereo_slam_demo.launch.py  rover.launch.py  rover_standalone.launch.py  simulator.launch.py
src/uirover_controllers/: CMakeLists.txt  package.xml  uirover_controllers.xml
src/uirover_controllers/config/: controllers.yaml
src/uirover_controllers/include/uirover_controllers/: validate_wheel_controller_parameters.hpp  visibility_control.h  wheel_controller.hpp
src/uirover_controllers/src/: wheel_controller.cpp  wheel_controller.yaml
src/uirover_controllers/test/: test_load_wheel_controller.cpp  test_wheel_controller.cpp  test_wheel_controller.hpp  test_wheel_controller_preceeding.cpp  wheel_controller_params.yaml  wheel_controller_preceeding_params.yaml
src/uirover_description/: CMakeLists.txt  package.xml
src/uirover_gazebo/: CMakeLists.txt  package.xml
src/uirover_gnss/: CMakeLists.txt  package.xml
src/uirover_hardware/: CMakeLists.txt  package.xml  setup.cfg  setup.py  uirover_hardware.xml
src/uirover_hardware/button_maps/: PS5.py  xbox360.py
src/uirover_hardware/include/uirover_hardware/: uirover_canbus_interface.hpp  uirover_hardware_interface.hpp  visibility_control.h
src/uirover_hardware/src/: uirover_canbus_interface.cpp  uirover_hardware_interface.cpp
src/uirover_hardware/test/: test_uirover_hardware_interface.cpp
src/uirover_hardware/uirover_hardware/: interface_node.py
src/uirover_hardware/xacro/: ros2_control.urdf.xacro
src/uirover_meta/: CMakeLists.txt  package.xml
src/uirover_mock_hardware/: package.xml  setup.cfg  setup.py
src/uirover_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/uirover_msgs/: package.xml
src/uirover_navigation/: CMakeLists.txt  package.xml
src/uirover_perception/: CMakeLists.txt  package.xml
src/uirover_perception/launch/: gstreamer_source.launch.py  realsense.launch.py  realsense_infra_slam_demo.launch.py  realsense_stereo_slam_demo.launch.py  stereo_slam.launch.py
src/uirover_perception/src/: camera_stream.cpp
src/uirover_simple_hardware/: package.xml  setup.cfg  setup.py
src/uirover_video/: CMakeLists.txt  package.xml
src/uirover_video/launch/: gstreamer_sink.launch.py
src/uirover_video/src/: camera_stream.cpp
src/uirover_video/src/uirover_msgs/: CMakeLists.txt
src/video_feed/: package.xml  ros2_cam_bandwidth  setup.cfg  setup.py
src/xbox_controller/: setup.cfg  setup.py
tools/: basestation_env.sh  install-ros.sh  kill.sh  rover_env.sh  symlink_udev.sh  zenoh_rover.sh
tools/docker/: build.sh  enter_docker.sh  install_docker.sh  launch.sh  nuke_everything.sh
tools/misc/: 99-uirover-rt-limits.conf  99-uirover-udev.rules  enable_vcan.sh  moveit_rviz_workaround.sh  setup_realtime.sh  setup_udev.sh
tools/ros/: build.sh  clean.sh  install_dependencies.sh  install_ros.sh  rosdep.sh
tools/teensy/: compile.sh  upload.sh
tools/testing/: disable_poor_signal_simulation.sh  enable_poor_signal_simulation.sh
(+1239 files in other folders)
