<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uirover_meta</name>
  <version>0.0.0</version>
  <description>Meta-package for uiowa rover</description>
  <maintainer email="holterethan@gmail.com">ethan</maintainer>
  <license>GPL-3.0-only</license>

  <exec_depend>uirover_arducam</exec_depend>
  <exec_depend>uirover_aruco</exec_depend>
  <exec_depend>uiuirover_bringup</exec_depend>
  <exec_depend>uiuirover_description</exec_depend>
  <exec_depend>uirover_hardware</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
